<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/iconInterval"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/Activity_type"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp" />

    <TextView
        android:text="@string/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:id="@+id/dataInici"
        android:layout_marginStart="28dp"
        android:layout_alignBaseline="@+id/durada"
        android:layout_alignBottom="@+id/durada"
        android:layout_toEndOf="@+id/iconInterval" />

    <TextView
        android:text="@string/Durada"
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_height="wrap_content"
        android:id="@+id/durada"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="19dp"
        android:layout_alignBottom="@+id/iconInterval"
        android:layout_toEndOf="@+id/dataInici" />
</RelativeLayout>