<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.joans.timetracker.FormulariAfegirInterval">

    <Button
        android:text="@string/Afegir_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAfegirProjecte"
        android:onClick="afegirInterval"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="sans-serif"
        android:text="@string/Durada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/durada"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/dataFinal" />

    <ImageButton
        android:layout_width="wrap_content"
        android:onClick="mostradpDataFinal"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/edit"
        android:id="@+id/imageButton4"
        android:background="@null"
        android:layout_alignTop="@+id/dataFinal"
        android:layout_alignStart="@+id/imageButton2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mostratpDurada"
        app:srcCompat="@drawable/edit"
        android:id="@+id/imageButton3"
        android:background="@null"
        android:layout_alignTop="@+id/durada"
        android:layout_alignStart="@+id/imageButton4" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="sans-serif"
        android:text="@string/Durada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_above="@+id/btnAfegirProjecte"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="73dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/edit"
        android:id="@+id/imageButton2"
        android:onClick="mostradpDataInicial"
        android:background="@null"
        android:layout_marginEnd="16dp"
        android:layout_alignTop="@+id/dataInici"
        android:layout_alignParentEnd="true" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="sans-serif"
        android:text="@string/Data_incial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dataInici"
        android:layout_marginEnd="11dp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toStartOf="@+id/imageButton2" />

    <TextView
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/Data_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dataFinal"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/dataInici" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="sans-serif"
        android:text="@string/Data_fi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="sans-serif"
        android:text="@string/Data_inici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginStart="27dp"
        android:layout_marginTop="108dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>