<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:text="@string/Nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomProjecte" />

    <Button
        android:text="@string/Afegir_Projecte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAfegirProjecte"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="afegirProjecte"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/nomProjecteInput"
        android:layout_below="@+id/nomProjecte"
        android:layout_alignParentStart="true"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/Descripcio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descProjecte"
        android:layout_below="@+id/nomProjecteInput"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/descProjecteInput"
        android:layout_below="@+id/descProjecte"
        android:layout_alignParentStart="true"
        tools:ignore="LabelFor" />
</RelativeLayout>